# sentencepiece-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.agents/: PLAN.md  SENTENCEPIECE_SKILL.md
.github/workflows/: ci.yml
docs/: devlog_20260504_0155.md
src/: darts.rs  error.rs  lib.rs  model.rs  normalizer.rs  processor.rs  proto.rs  util.rs
tests/: processor_tests.rs
